--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "author": "peggy & patrice",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "morgan": "^1.7.0",
+    "swig": "^1.4.2"
   }
 }
