--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.13.4",
+    "lodash": "^4.11.1",
     "morgan": "^1.7.0",
     "swig": "^1.4.2"
   }
