--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "peggy & patrice",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "lodash": "^4.11.1",
     "morgan": "^1.7.0",
