--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.13.4",
     "lodash": "^4.11.1",
     "morgan": "^1.7.0",
+    "socket.io": "^1.4.5",
     "swig": "^1.4.2"
   }
 }
